tests/baselines/reference/alwaysStrictModule2.errors.txt
tests/cases/compiler/a.ts(3,13): error TS1100: Invalid use of 'arguments' in strict mode.
tests/cases/compiler/b.ts(3,13): error TS1100: Invalid use of 'arguments' in strict mode.


==== tests/cases/compiler/a.ts (1 errors) ====
    module M {
        export function f() {
            var arguments = [];
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        }
    }
    
==== tests/cases/compiler/b.ts (1 errors) ====
    module M {
        export function f2() {
            var arguments = [];
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        }
    }